# djangocms-blog

./: .bumpversion.cfg  .checkignore  .codeclimate.yml  .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  README.rst~  addon.json  aldryn_config.py  cms_helper.py  conftest.py  pyproject.toml  requirements-docs.txt  requirements-test.txt  requirements.txt  run_tests.py  runtests.py  setup.cfg  setup.py  tasks.py  tox.ini  tox_pip.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ---bug-report.md
.github/workflows/: lint.yml  publish.yml  test.yml
.tx/: config
changes/: 428.feature  524.docs  532.bugfix  541.bugfix  546.feature  564.feature  567.feature  569.feature  571.feature  575.bugfix  577.bugfix  584.bugfix  591.bugfix  593.misc  595.bugfix  597.bugfix  598.bugfix  603.bugfix  606.bugfix  607.bugfix  608.bugfix  613.bugfix  613.doc  614.feature  618.bugfix  620.feature  622.feature  624.feature  632.bugfix  636.docs  637.feature  639.feature  643.feature  645.bugfix  648.bugfix  653.bugfix  660.feature  662.feature  663.feature  676.feature  (+20 more)
djangocms_blog/: __init__.py  addon.json  admin.py  apps.py  cms_app.py  cms_appconfig.py  cms_apps.py  cms_config.py  cms_menus.py  cms_plugins.py  cms_toolbar.py  cms_toolbars.py  cms_wizards.py  cms_wizards_x.py  compat.py  feeds.py  fields.py  forms.py  linked_content.py  managers.py  menu.py  models.py  rendering.py  search_indexes.py  settings.py  taggit_urls.py  urls.py  urls_base.py  urls_hub.py  utils.py  views.py
djangocms_blog/liveblog/: __init__.py  apps.py  cms_plugins.py  consumers.py  models.py  routing.py
djangocms_blog/liveblog/migrations/: 0001_initial.py  0002_liveblog_title.py  0003_auto_20160917_0123.py
djangocms_blog/media/: base.py
djangocms_blog/migrations/: 0001_initial.py  0001_squashed_0047_migrate_config.py  0002_auto__del_blogcategorytranslation__del_unique_blogcategorytranslation_.py  0002_post_sites.py  0003_auto_20141201_2252.py  0003_rename_plugins.py  0004_auto_20150108_1435.py  0004_auto__add_field_posttranslation_meta_description.py  0005_auto_20150211_1721.py  0005_auto_20150212_1118.py  0005_auto__add_field_posttranslation_meta_keywords.py  0006_auto_20150214_1907.py  0006_auto_20150719_0933.py  0006_auto__add_field_post_enable_comments.py  0007_auto_20150719_0933.py  0007_auto__add_field_posttranslation_post_text.py  0008_auto_20150814_0831.py  0008_auto__add_field_posttranslation_meta_title.py  0009_latestpostsplugin_tags_new.py  0010_auto_20150923_1151.py  0010_auto_20151105_1326.py  0011_auto_20151024_1809.py  0011_auto_20151106_1059.py  0012_auto_20151106_1519.py  0012_auto_20151220_1734.py  0013_auto_20151207_1027.py  0013_auto_20160201_2235.py  0014_auto_20151207_1349.py  0014_auto_20160215_1331.py  0015_auto_20160215_2353.py  0015_auto_20160408_1849.py  0016_auto_20160502_1741.py  0016_post_liveblog.py  0017_thumbnail_move.py  0018_post_liveblog.py  0018_thumbnail_move2.py  0019_auto_20160605_2305.py  0019_thumbnail_move3.py  0020_thumbnail_move4.py  0021_auto_20160823_2008.py  (+50 more)
djangocms_blog/migrations_django/: 0001_initial.py
djangocms_blog/sitemaps/: __init__.py
djangocms_blog/south_migrations/: 0001_initial.py  0002_auto__del_blogcategorytranslation__del_unique_blogcategorytranslation_.py  0003_rename_plugins.py  0004_auto__add_field_posttranslation_meta_description.py  0005_auto__add_field_posttranslation_meta_keywords.py  0006_auto__add_field_post_enable_comments.py  0007_auto__add_field_posttranslation_post_text.py  0008_auto__add_field_posttranslation_meta_title.py  0009_auto.py  0010_auto__chg_field_post_main_image_full__chg_field_post_main_image__chg_f.py  0011_auto__chg_field_posttranslation_slug.py  0011_chg_field_post_translation_abstract.py  0012_move_tags.py  0013_auto.py  0014_auto__add_blogconfigtranslation__add_unique_blogconfigtranslation_lang.py  0014_auto__add_genericblogplugin__add_blogconfig__add_blogconfigtranslation.py  0015_auto__del_field_blogconfig_paginate_by__del_field_blogconfig_set_autho.py  0015_create_appconfig.py  0016_auto__add_field_blogconfigtranslation_object_name.py  0016_create_appconfig.py  0017_auto__add_field_posttranslation_og_description__add_field_posttranslat.py  0017_auto__chg_field_post_main_image_full__chg_field_post_date_published__c.py  0018_auto__add_field_post_liveblog.py  0018_auto__chg_field_post_main_image_full__chg_field_post_main_image_thumbn.py  0019_auto__chg_field_post_author__chg_field_post_main_image_full__chg_field.py
djangocms_blog/static/css/: djangocms_blog_admin.css
djangocms_blog/templates/djangocms_blog/: base.html  category_list.html  post_archive.html  post_detail.html  post_instant_article.html  post_list.html  post_structure.html
djangocms_blog/templatetags/: djangocms_blog.py
docs/: Makefile  channels.rst  cmsplugin_filer.rst  conf.py  development.rst  features.rst  index.rst  installation.rst  settings.rst  usage.rst
docs/autodoc/: admin.rst  index.rst  menu.rst  models.rst  plugins.rst  settings.rst  views.rst
docs/features/: admin_customization.rst  channels.rst  cmsplugin_filer.rst  content_hub.rst  extensions.rst  home.rst  index.rst  media.rst  menu.rst  meta.rst  multisite.rst  permalinks.rst  related.rst  shares.rst  templates.rst  urlconf.rst  wizard.rst
tests/: __init__.py  base.py  base_test.py  base_urls.py  settings.py  test_extension.py  test_indexing.py  test_liveblog.py  test_media.py  test_menu.py  test_models.py  test_namespace.py  test_plugins.py  test_search.py  test_setup.py  test_toolbar.py  test_views.py  test_wizards.py  utils.py  x_test_wizards.py
tests/fixtures/: vimeo.json
tests/media_app/: cms_plugins.py  models.py
tests/media_app/migrations/: 0001_initial.py
tests/test_utils/: admin.py  blog_urls.py  models.py  routing.py  urls.py
tests/test_utils/migrations/: 0001_initial.py  0002_auto_20200516_1230.py  0003_remove_postplaceholderextension_some_placeholder_and_more.py
(+58 files in other folders)
