[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "djangocms-blog"
dynamic = ["version"]
description = "The blog application for django CMS 4"
readme = "README.rst"
license = "BSD-3-Clause"
requires-python = ">=3.7"
authors = [
    { name = "Iacopo Spalletti", email = "i.spalletti@nephila.it" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django CMS :: 4.1",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "django-cms>=4.1.0rc3",
    "django-filer>=2.0",
    "django-meta>=2.0",
    "django-parler>=2.0",
    "django-sortedm2m",
    "django-taggit-autosuggest",
    "django-taggit-templatetags",
    "django-taggit>=1.0",
    "djangocms-text-ckeditor>=5.1.2",
    "easy-thumbnails>=2.4.1",
    "lxml",
    "pytz",
]

[project.optional-dependencies]
docs = [
    "django<5.0",
]
taggit-helpers = [
    "django-taggit-helpers",
]

[project.urls]
Documentation = "https://djangocms-blog.readthedocs.io/"
Homepage = "https://github.com/nephila/djangocms-blog"

[tool.hatch.version]
path = "djangocms_blog/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/djangocms_blog",
]

[tool.black]
line-length = 119
target-version = ["py39"]

[tool.towncrier]
package = "djangocms_blog"
directory = "changes"
filename = "HISTORY.rst"
title_format = "{version} ({project_date})"

[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-module = true
ignore-nested-functions = true
fail-under = 0
exclude = ["docs", ".tox"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true

[tool.isort]
profile = "black"
combine_as_imports = true
default_section = "THIRDPARTY"
force_grid_wrap = 0
include_trailing_comma = true
known_first_party = "knocker"
line_length = 119
multi_line_output = 3
use_parentheses = true

[tool.ruff]
ignore = []
line-length = 119
target-version = "py39"

[tool.ruff.mccabe]
max-complexity = 5

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
# django_find_project = false
# pythonpath = [".", "djangocms_blog"]
