[bumpversion]
current_version = 1.2.0a1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
    {major}.{minor}.{patch}.{release}{relver}
    {major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
    dev
    a
    b
    rc
    gamma

[bumpversion:file:djangocms_blog/__init__.py]

[metadata]
name = djangocms-blog
version = attr: djangocms_blog.__version__
url = https://github.com/nephila/djangocms-blog
project_urls =
    Documentation = https://djangocms-blog.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = The blog application for django CMS
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
install_requires =
     django-parler>=2.0
     django-cms>=3.7
     django-taggit>=1.0
     django-filer>=1.4
     pytz
     django-taggit-templatetags
     django-taggit-autosuggest
     djangocms-text-ckeditor>=3.9
     easy-thumbnails>=2.4.1
     django-meta>=1.4
     aldryn-apphooks-config>=0.5
     djangocms-apphook-setup
     django-sortedm2m
     lxml
setup_requires =
    setuptools
packages = djangocms_blog
python_requires = >=3.5
test_suite = cms_helper.run
zip_safe = False
keywords =
    djangocms-blog
    blog
    django
    wordpress
    multilingual

[options.package_data]
* = *.txt, *.rst
djangocms_blog = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
search = aldryn-search
taggit-helpers = django-taggit-helpers
docs =
    django<3.1

[upload]
repository = https://upload.pypi.org/legacy/

[sdist]
formats = zip

[bdist_wheel]
universal = 1
