[metadata]
name = djangocms-blog
version = attr: djangocms_blog.__version__
url = https://github.com/nephila/djangocms-blog
project_urls =
	Documentation = https://djangocms-blog.readthedocs.io/
author = Iacopo Spalletti
author_email = i.spalletti@nephila.it
description = The blog application for django CMS
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
license = BSD
license_file = LICENSE
classifiers =
	License :: OSI Approved :: BSD License
	Development Status :: 5 - Production/Stable
	Framework :: Django
	Framework :: Django :: 3.2
	Framework :: Django :: 4.1
	Framework :: Django :: 4.2
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11

[options]
include_package_data = True
install_requires =
	django-parler>=2.0
	django-cms>=3.9
	django-taggit>=1.0
	django-filer>=2.0
	pytz
	django-taggit-templatetags
	django-taggit-autosuggest
	djangocms-text-ckeditor>=3.9
	easy-thumbnails>=2.4.1
	django-meta>=2.4
	aldryn-apphooks-config>=0.5
	djangocms-apphook-setup
	django-sortedm2m
	lxml
setup_requires =
	setuptools
packages = djangocms_blog
python_requires = >=3.7
test_suite = cms_helper.run
zip_safe = False
keywords =
	djangocms-blog
	blog
	django
	wordpress
	multilingual
	django-app-enabler addon

[options.package_data]
* = *.txt, *.rst
djangocms_blog = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[options.extras_require]
taggit-helpers = django-taggit-helpers
docs =
	django<5.0
    sphinx>2,<5

[sdist]
formats = zip

[bdist_wheel]
universal = 1
